# ASISaga

./: .gitignore  .gitmodules  ASI_SAGA_DEVELOPMENT_PLAN.md  AZURE_REFACTORING_COMPLETE.md  AZURE_SERVICES_REFACTORING.md  GENESIS_ECOSYSTEM.md  LICENSE  LargeLanguageModel.py  PurposeDrivenAIAgent.py  README.md  architecture-diagram.mmd  check-python.ps1  check_contrast.py  commit-all.ps1  delete-packages.ps1  fetch-vendor-assets.ps1  install-all-editable.ps1  install-packages.ps1  package-lock.json  package.json  pyproject.toml  sync-nav.ps1  test_playwright.py
.github/: copilot-instructions.md  english-as-code.instructions.md  python.instructions.md  ux.instructions.md  website.instructions.md
Buddhi/: pyproject.toml
Buddhi/Buddhi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
BusinessOperatingSystem/: README.md  main.py
IntelligenceAgent/: LearningAgent.py  PurposeDrivenAgent.py
PurposeDrivenAgent/: KnowledgeAgent.py  PurposeDrivenAIAgent.py  PurposeDrivenAgent.py
Samples/: main.py
Website/: .accessibility-templates.html  .htmlhintrc  .pre-commit-accessibility.sh  .scss-guidelines.scss  ACCESSIBILITY-FIRST-GUIDE.md  QUALITY_ASSURANCE_SYSTEM_SUMMARY.md  SCSS_UTILITY_REFACTORING_GUIDE.md  _test_output.css.map  fix-critical-violations.ps1  fix-syntax-errors.ps1  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  stylelint.config.js  subdomains.json  website_structure.json
docs/: AGENT_FRAMEWORK_MIGRATION.md  CHATROOM_BOARDROOM_REFACTORING.md  MIGRATION_COMPLETE.md  README.md  (+3 more)
tests/: package.json  pyproject.toml  subdomains.json
(+55 files in other folders)
