[project]
name = "albatross"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["bird-feeder", "tqdm>=4,<5"]

[tool.uv.sources]
bird-feeder = { workspace = true }

[tool.uv.workspace]
members = [
	"RealmOfAgents/PurposeDrivenAgent",
	"RealmOfAgents/SelfLearningAgent",
	"RealmOfAgents/AgentOperatingSystem",
	"RealmOfAgents/FineTunedLLM",
	"BusinessInfinity",
	"MCP/ERPNext-MCP",
	"MCP/linkedin-mcp-server"
]