[project]
name = "ASISaga"
version = "0.1.0"
description = "ASISaga - Comprehensive AI Agent System with Agent Operating System (AOS) and Business Infinity (BI)"
requires-python = ">=3.8"
dependencies = ["python-dotenv>=1.0.1"]

[tool.uv.workspace]
members = [
	"RealmOfAgents/AgentOperatingSystem",
	"BusinessInfinity",
	"MCP/ERPNext-MCP",
	"MCP/linkedin-mcp-server"
]